Added settings page implementation; Added bio and profilepicturepath to user data members; added dark/light theme implementation with an overlay